# zf

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md
.cargo/: config.toml
crates/: Cargo.toml
crates/zf/: Cargo.toml
crates/zf-bridge/: Cargo.toml
crates/zf-bridge/src/: lib.rs
crates/zf-ffi/: Cargo.toml
crates/zf-ffi/src/: bridge.rs  commands.rs  lib.rs  memory.rs  results.rs
crates/zf-runtime/: Cargo.toml
crates/zf-runtime/src/: bridge.rs  cli.rs  cmds.txt  lib.rs  main.rs  memory.rs  runtime.rs  shell.rs  test.rs
crates/zf-shell/: Cargo.toml
crates/zf-shell/src/: cmd.rs  imports.rs  lib.rs  main.rs  memory.rs  shell.rs
crates/zf-shell/src/commands/: audio.rs  clear.rs  credits.rs  engine.rs  fire.rs  fsays.rs  game.rs  hi.rs  hint.rs  level.rs  mission.rs  mod.rs  mystery.rs  radar.rs  random_pos.rs  repair.rs  shield.rs  special_thanks.rs  task.rs  term.rs  time.rs  tutorial.rs  ui.rs  window.rs  zf_call.rs
crates/zf-term/: Cargo.toml
crates/zf-term/src/: lib.rs  weclome.ansi  weclome.txt
crates/zf-x/: Cargo.toml
crates/zf-x/src/: export.rs  main.rs  points.rs  refs.rs
crates/zf/src/: lib.rs
crates/zf/src/common/: logging.rs  mod.rs  tracing.rs
crates/zf/src/entities/: game_state.rs  level.rs  mission.rs  mod.rs
crates/zf/src/managers/: animation.rs  command_input_watcher.rs  mod.rs  simple.rs  sys.rs  time_trial_timer.rs  vm.rs
crates/zf/src/path/: mod.rs  path.rs
crates/zf/src/refs/: groups.rs  mod.rs  path.rs
crates/zf/src/ui/: env.rs  example.rs  hello.rs  history.rs  level_name.rs  level_time.rs  listenable_event.rs  mission.rs  mod.rs  palette.rs  perf_label.rs  player_health_bar.rs  player_status.rs  radar.rs  result.rs  screen_transition.rs  terminal.rs  terminal_wrap.rs  tips.rs
crates/zf/src/units/: enemy_s1.rs  enemy_spawner.rs  gangut_space_hub.rs  level_indicator.rs  mod.rs  player.rs  radiation_area.rs  t_dummy.rs  target_dummy.rs  target_point.rs  target_point_hazard.rs  tutorial_s1.rs
crates/zf/src/vm/: commands.rs  connector.rs  execute.rs  mod.rs  parser.rs
crates/zf/src/vm_connector/: mod.rs  vm_host.rs
crates/zf/src/weapons/: beam.rs  homing_missile.rs  launcher.rs  mod.rs
docs/: CREDITS.md  DESIGN.md  META.md  SPEC.md  architecture.md  credits.md  package.json  pnpm-lock.yaml  screenshots.md  slides.md  spec.md  style.css
docs/ARCHITECTURE/: event.md
docs/public/: clear.avif  control.avif  engine.avif  fire.avif  hp.avif  level.avif  material.avif  opacity.avif  radar.avif  start.avif  time.avif  title.avif  weapon.avif
scripts/: backup  build  deps  dev  gen  weclome-ansi
zf/: Terminal.gdns  icon.png.import  project.godot
zf-lib/: Cargo.toml
zf-lib/src/: command_palette.rs  env.rs  extract.rs  hello.rs  lib.rs
zf-lib/src/command/: history.rs  mod.rs  palette.rs
zf-lib/src/common/: mod.rs  path.rs
zf-lib/src/entities/: mission.rs
zf-lib/src/ui/: hello.rs  history.rs  mod.rs  palette.rs  perf_label.rs  radar.rs  (+2 more)
zf/assets/: CodeTheme.tres  EnemyBarProgress.png.import  EnemyBarProgressUnder.png.import  JetBrains_Mono.tres  PathFollow.shader  PathFollowRanbow.shader  Pixelate.tres  PlayerHealthBar.shader  PlayerHealthBar2D.shader  PlayerHealthBarShader.tres  RadiationArea.shader  Shield.shader  TargetPoint.shader  TargetPointHazard.shader  TerminalFont.tres  UIFont.tres  UIFontMenuTitle.tres  UIFontTitle.tres  UITheme.tres  UITitle.shader  ZF.blend  ZF.png.import  ZFTransparent.png.import  ZF_Transparent.png.import  ZF_Transparent_256x256.png.import  bar_progress.png.import  bar_under.png.import  code_theme.tres  pixelate.tres  radar_bg.shader  sandbox.tscn  t-dummy.tscn  theme_transparent.tres
zf/levels/: Challenge_Enemy_Appear.tscn  Challenge_Engine_Rel.tscn  Challenge_Final.tscn  Challenge_Infinite.tscn  Challenge_Shield.tscn  Challenge_Shield_RadiationArea.tscn  Challenge_Shield_RadiationArea_Rel.tscn  Challenge_Shield_RadiationArea_Task_On.tscn  Challenge_Task_Engine_Combine.tscn  GameClear.tscn  Sandbox.tscn  StartMenu.tscn  Tutorial-Fire.tscn  Tutorial-Movement.tscn  Tutorial.tscn  TutorialMovement.tscn  Tutorial_Enemy_Appear.tscn  Tutorial_Engine.tscn  Tutorial_Engine_Rel.tscn  Tutorial_Fire.tscn  Tutorial_Fire_Beam.tscn  Tutorial_Fire_HomingMissile.tscn  Tutorial_Hello_World.tscn  Tutorial_Mission_Engine_Rel.tscn  Tutorial_Radar_Engine_Rel.tscn  Tutorial_Shield.tscn  Tutorial_Task_Engine_Combine.tscn  Tutorial_Task_Engine_Rel.tscn  Tutorial_Task_Radar_Engine_Rel_Filter.tscn
zf/scene/: Base.tscn  BaseLevel.tscn  HomingMissile.tscn  T-Dummy.tscn  space.tscn  start_menu.tscn  t-dummy.tscn  test.tscn
zf/scenes/: AutoLoad.tscn  Base.tscn  BaseLevel.tscn  Beam.tscn  CommandInputWatcher.tscn  E_S1.tscn  EnemyHealthBar2D.tscn  EnemyHealthBar3D.tscn  EnemySpawner.tscn  Enemy_S1.tscn  EngineParticles.tscn  Environment.tscn  HealthBar2D.tscn  HealthBar3D.tscn  HomingMissile.tscn  ItemList.tscn  Launcher.tscn  LevelIndicator.tscn  LevelResult.tscn  LevelTime.tscn  Mission.tscn  Model_S1.tscn  Orbit.tscn  Planet.tscn  PlanetLava.tscn  PlanetRinged.tscn  PlayerHealthBar.tscn  PlayerHealthBar2D.tscn  PlayerMjolnir.tscn  PlayerStatus.tscn  Radar.tscn  RadiationArea.tscn  Sandbox.tscn  Sandbox3D.tscn  Shield.tscn  T-Dummy.tscn  T_S1.tscn  TargetDummy.tscn  TargetPoint.tscn  TargetPointHazard.tscn  (+8 more)
zf/scripts/: AnimationManager.gdns  Beam.gdns  CommandHistory.gdns  CommandInputWatcher.gdns  CommandPalette.gdns  CommandResult.gdns  CommandResultDisplay.gdns  EnemySpawner.gdns  Enemy_S1.gdns  Env.gdns  GangutSpaceHub.gdns  HomingMissile.gdns  Launcher.gdns  LevelIndicator.gdns  LevelName.gdns  LevelTime.gdns  ListenableEvent.gdns  Mission.gdns  PerfLabel.gdns  PlayerHealthBar.gdns  PlayerStatus.gdns  PlayerStatusDisplay.gdns  Radar.gdns  RadiationArea.gdns  ScreenTransition.gdns  SysManager.gdns  SysManger.gdns  T-Dummy.gdns  TargetDummy.gdns  TargetPoint.gdns  TargetPointHazard.gdns  TerminalWrap.gdns  TimeTrialTimer.gdns  Tips.gdns  Tutorial_S1.gdns  VM.gdns  VMHost.gdns  VMManager.gdns  VMManger.gdns  player.gdns
zf/shaders/: pixelate.shader  radar_tint.shader
(+160 files in other folders)
