[workspace]

members = [
    "crates/zf",
    "crates/zf-x",
    "crates/zf-shell",
    "crates/zf-bridge",
    "crates/zf-runtime",
    "crates/zf-term",
]

exclude = [
    "crates/nushell",
    "crates/wezterm",
]

[workspace.dependencies]
anyhow = "1.0.65"
expect-test = "1.4.0"
gdnative = { git = "https://github.com/Bromeon/godot-rust.git" }

[profile.release]
incremental = true
debug = 0
