[package]
name = "zf-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zf-runtime-bin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, version = "1.0.65"}
expect-test = { workspace = true }

wasmtime = "1.0.0"
wasmtime-wasi = "1.0.0"
wasi-common = "1.0.1"
strip-ansi-escapes = "0.1.1"

zf-bridge = { path = "../zf-bridge" }
