[package]
name = "zf-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zf-runtime-bin"
path = "src/cli.rs"

[dependencies]
anyhow = { workspace = true }
expect-test = { workspace = true }
bincode = "2.0.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasmtime = "3.0.1"
wasmtime-wasi = "3.0.1"
wasi-common = "3.0.1"
strip-ansi-escapes = "0.1.1"

zf-ffi = { path = "../zf-ffi" }
zf-shell = { path = "../zf-shell", artifact = "bin", target = "wasm32-wasi" }
