[package]
name = "zf-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zf-shell"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, version = "1.0.65"}
miette = { version = "5.1.0", features = ["fancy"] }
# nu-cli = { path= "../nushell", default-features = false }
# nu-errors = { path= "../nushell", default-features = false }
nu-command = { path = "../nushell/crates/nu-command", default-features = false }
nu-protocol = { path = "../nushell/crates/nu-protocol", default-features = false }
# nu-source = { path = "../nushell/crates/nu-source", default-features = false }
nu-engine = { path = "../nushell/crates/nu-engine", default-features = false }
nu-parser = { path = "../nushell/crates/nu-parser", default-features = false }
once_cell = "1.15.0"

zf-bridge = { path = "../zf-bridge" }