[package]
name = "zf-x"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "refs"
path = "src/refs.rs"

[[bin]]
name = "points"
path = "src/points.rs"

[[bin]]
name = "export"
path = "src/export.rs"

[dependencies]
convert_case = "0.6.0"
