[package]
name = "zf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, version = "1.0.65"}
gdnative = { workspace = true }
nu-ansi-term = "0.46"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

zf-runtime = { path = "../zf-runtime" }
zf-bridge = { path = "../zf-bridge" }
zf-term = { path = "../zf-term" }
