[package]
name = "zf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, version = "1.0.66"}
time = "0.3.12"
gdnative = { workspace = true }
nu-ansi-term = "0.46"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = "0.3"
rand = "0.8"

zf-ffi = { path = "../zf-ffi", features = ["godot"] }
zf-runtime = { path = "../zf-runtime" }
zf-term = { path = "../zf-term" }
